--- a/LanguageSchool/Views/Question/AddAnswers.cshtml
+++ b/LanguageSchool/Views/Question/AddAnswers.cshtml
@@ -30,7 +30,7 @@
                 <div class="row">
                     <div class="form-group">
                         <div class="control-label col-md-2">
-                            <strong>Treść</strong>
+                            <strong>&nbsp;&nbsp;Treść pytania</strong>
                         </div>
                         <div class="col-md-10">
                             @Html.DisplayFor(model => model.Contents)
@@ -40,7 +40,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="form-group">
-                            <div class="control-label col-md-7">
+                            <div class="control-label col-md-6">
                                 <strong>Wyświetlane</strong>
                             </div>
                             <div class="col-md-3">
@@ -48,9 +48,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="form-group">
-                            <div class="control-label col-md-7">
+                            <div class="control-label col-md-4">
                                 <strong>Punkty</strong>
                             </div>
                             <div class="col-md-3">
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-md-offset-1">
                         <div class="form-group">
                             <div class="control-label col-md-7">
                                 <strong>Wielokrotnego wyboru</strong>
