--- a/LanguageSchool/Views/Question/CreateClosed.cshtml
+++ b/LanguageSchool/Views/Question/CreateClosed.cshtml
@@ -55,7 +55,7 @@
                                 <strong>Wielokrotnego wyboru</strong>
                             </div>
                             <div class="col-md-3">
-                                @Html.CheckBoxFor(model => model.IsMultichoice, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.IsMultichoice, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.IsMultichoice, "", new { @class = "text-danger" })
                             </div>
                         </div>
