Poprawki dla isdeleted w części studenta

--- a/LanguageSchool/Views/Group/StudentDetails.cshtml
+++ b/LanguageSchool/Views/Group/StudentDetails.cshtml
@@ -124,7 +124,14 @@
                 </tr>
                 @foreach (var test in Model.TakenTests)
                 {
-                    <tr>
+                    var fontColor = "black";
+
+                    if (!test.IsMarked)
+                    {
+                        fontColor = "silver";
+                    }
+
+                    <tr style="color: @fontColor">
                         <td>
                             @test.CreationDate
                         </td>
